kubernetes-files/argo-cd/argo-cd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-prod
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/private-key-rotation-policy: always  
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  generation: 1
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.webport.co.za
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.webport.co.za
    secretName: webport-certificate-tls
